--- a/src/pages/home-page/home-page.scss
+++ b/src/pages/home-page/home-page.scss
@@ -1,6 +1,9 @@
-.homePage{
+.homePage {
     width: 100%;
     height: 100vh;
-    display:  grid;
-    place-content: center;
+
+    h1 {
+        text-align: center;
+        margin-top: 45vh;
+    }
 }
