feat(Login/Registration): add  validation part on Login Registration [SP-71]

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 * {
   margin: 0px;
   padding: 0px;
-  box-sizing: border-box;
   user-select: none;
+  border-radius: 14px;
 }
 
 body {
@@ -13,4 +13,3 @@ body {
 * {
   overflow-y: hidden;
 }
-
