--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -13,6 +13,21 @@ $sparrow-white: #ffffff;
 $sparrow-light-gray: #cccccc;
 $sparrow-gradient: red;
 $sparrow-background: #1e1e1e;
+$sparrow-plusbutton: #85c2ff;
+$sparrow-border-color: #313233;
+$sparrow-get: #69d696;
+$sparrow-put: #9685ff;
+$sparrow-post: #ffe47e;
+$sparrow-request-body: #8a9299;
+$sparrow-send-button: #1193f0;
+$sparrow-send-hoverbutton: #4030f2e1;
+
+:root {
+  --success-color: #{$sparrow-success};
+  --button-color: #{$sparrow-request-body};
+  --send-button: #{$sparrow-send-button};
+  --send1-hoverbutton: #{$sparrow-send-hoverbutton};
+}
 
 // $button-color: linear-gradient(270deg, #6147ff -1.72%, #1193f0 100%);
 
@@ -28,8 +43,13 @@ $theme-colors: map-merge(
     "dangerColor": $sparrow-danger,
     "whiteColor": $sparrow-white,
     "lightGray": $sparrow-light-gray,
-    "backgroundColor": $sparrow-background
-      // "buttonColor": $button-color,,,,,,,,,,,,,,,,,,,
+    "backgroundColor": $sparrow-background,
+    "plusButton": $sparrow-plusbutton,
+    "lightBackground": $sparrow-border-color,
+    "getColor": $sparrow-get,
+    "requestBodyColor": $sparrow-request-body,
+    "labelColor": $sparrow-send-button
+      // "buttonColor": $button-color,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
   )
 );
 
@@ -51,4 +71,9 @@ $theme-colors: map-merge(
 .border-default {
   border-color: $sparrow-default;
   border-width: 1px;
+}
+
+.border-color {
+  border-color: #313233;
+  width: 1px;
 }
