--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -27,6 +27,8 @@ $sparrow-send-hoverbutton: #4030f2e1;
   --button-color: #{$sparrow-request-body};
   --send-button: #{$sparrow-send-button};
   --send1-hoverbutton: #{$sparrow-send-hoverbutton};
+
+  --background-color: #{$sparrow-background};
 }
 
 // $button-color: linear-gradient(270deg, #6147ff -1.72%, #1193f0 100%);
@@ -49,7 +51,7 @@ $theme-colors: map-merge(
     "getColor": $sparrow-get,
     "requestBodyColor": $sparrow-request-body,
     "labelColor": $sparrow-send-button
-      // "buttonColor": $button-color,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+      // "buttonColor": $button-color,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
   )
 );
 
