--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -20,6 +20,8 @@ $sparrow-border-color: #313233;
 $sparrow-get: #69d696;
 $sparrow-put: #9685ff;
 $sparrow-post: #ffe47e;
+$sparrow-delete: #FF7878;
+$sparrow-arc: #8A9299;
 $sparrow-request-body: #8a9299;
 $sparrow-send-button: #1193f0;
 $sparrow-send-hoverbutton: #4030f2e1;
@@ -32,6 +34,11 @@ $sparrow-send-hoverbutton: #4030f2e1;
   --white-color: #{$sparrow-white};
   --background-color: #{$sparrow-background};
   --border-color: #{$sparrow-border-color};
+  --request-get: #{$sparrow-get};
+  --request-put: #{$sparrow-put};
+  --request-post: #{$sparrow-post};
+  --request-delete: #{$sparrow-delete};
+  --request-arc: #{$sparrow-arc};
 }
 
 // $button-color: linear-gradient(270deg, #6147ff -1.72%, #1193f0 100%);
