fix: add response section [SP-117]

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,6 @@
   margin: 0px;
   padding: 0px;
   font-family: "Roboto", sans-serif;
-  /* overflow-y: hidden; */
+  /* overflow: hidden; */
   /* background: #313233; */
 }
