feat: add collaps/expand response header section SP[149]

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,7 +24,7 @@ $sparrow-delete: #ff7878;
 $sparrow-arc: #8a9299;
 $sparrow-request-body: #8a9299;
 $sparrow-send-button: #1193f0;
-$sparrow-send-hoverbutton: #4030f2e1;
+$sparrow-send-hoverbutton: #04416d;
 $sparrow-button-background: #2d2c2c;
 $sparrow-button-color: #e5e5e5;
 
