--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -33,6 +33,10 @@ $sparrow-send-hoverbutton: #04416d;
 $sparrow-button-background: #2d2c2c;
 $sparrow-button-color: #e5e5e5;
 $sparrow-dull-background: #232424;
+$sparrow-cancel-hover: #31323360;
+$sparrow-delete-hover: #f16674;
+$sparrow-background-hover: rgba(0, 0, 0, 0.706);
+$sparrow-button-pressed: #1d3650;
 
 :root {
   --blackColor: #{$sparrow-black};
@@ -54,6 +58,11 @@ $sparrow-dull-background: #232424;
   --request-patc: #{$sparrow-patc};
   --request-opt: #{$sparrow-opt};
   --workspace-hover-color: #{$sparrow-plusbutton};
+  --dangerColor: #{$sparrow-danger};
+  --cancel-hover: #{$sparrow-cancel-hover};
+  --delete-hover: #{$sparrow-delete-hover};
+  --background-hover: #{$sparrow-background-hover};
+  --button-pressed: #{$sparrow-button-pressed};
 }
 
 // $button-color: linear-gradient(270deg, #6147ff -1.72%, #1193f0 100%);
@@ -85,7 +94,7 @@ $theme-colors: map-merge(
     "headColor": $sparrow-head,
     "patchColor": $sparrow-patc,
     "optionsColor": $sparrow-opt,
-    "dullBackground" : $sparrow-dull-background
+    "dullBackground": $sparrow-dull-background,
   )
 );
 
