--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -32,6 +32,7 @@ $sparrow-send-button: #1193f0;
 $sparrow-send-hoverbutton: #04416d;
 $sparrow-button-background: #2d2c2c;
 $sparrow-button-color: #e5e5e5;
+$sparrow-input-slider-button:#1d3650;
 
 :root {
   --blackColor: #{$sparrow-black};
@@ -53,6 +54,7 @@ $sparrow-button-color: #e5e5e5;
   --request-patc: #{$sparrow-patc};
   --request-opt: #{$sparrow-opt};
   --workspace-hover-color: #{$sparrow-plusbutton};
+  --sparrow-input-slider-button:#{$sparrow-input-slider-button};
 }
 
 // $button-color: linear-gradient(270deg, #6147ff -1.72%, #1193f0 100%);
