feat: add folder and workspace tab [SP-246]

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -73,6 +73,7 @@ $sparrow-selectedSideBarTab: #11253a;
   --button-pressed: #{$sparrow-button-pressed};
   --keyvalue-pair: #{$sparrow-key-value-pair};
   --selected-active-sidebar: #{$sparrow-selectedSideBarTab};
+  --sparrow-blue: #{$sparrow-blue};
 }
 
 // $button-color: linear-gradient(270deg, #6147ff -1.72%, #1193f0 100%);
