fix: splitter, animations [SP-276]

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -74,6 +74,7 @@ $sparrow-selectedSideBarTab: #11253a;
   --keyvalue-pair: #{$sparrow-key-value-pair};
   --selected-active-sidebar: #{$sparrow-selectedSideBarTab};
   --sparrow-blue: #{$sparrow-blue};
+  --sparrow-button-background: #{$sparrow-button-background};
 }
 
 // $button-color: linear-gradient(270deg, #6147ff -1.72%, #1193f0 100%);
