feat: truncate strings on long names for collection/request/folder [SP-352]

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -142,3 +142,8 @@ $theme-colors: map-merge(
   border-color: #313233;
   width: 1px;
 }
+.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
