feat: create ui, rxdb model for teams, etc. [SP-408]

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -55,6 +55,7 @@ $sparrow-recentApiText: #f3e4e4d7;
   --send1-hoverbutton: #{$sparrow-send-hoverbutton};
   --white-color: #{$sparrow-white};
   --background-color: #{$sparrow-background};
+  --dull-background-color: #{$sparrow-dull-background};
   --border-color: #{$sparrow-border-color};
   --request-get: #{$sparrow-get};
   --request-put: #{$sparrow-put};
