feat: change primary blue theme color [SP-365]

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -28,7 +28,7 @@ $sparrow-patc: #df77f9;
 $sparrow-opt: #f15ea5;
 $sparrow-arc: #8a9299;
 $sparrow-request-body: #8a9299;
-$sparrow-send-button: #1193f0;
+$sparrow-send-button: #85C2FF;
 $sparrow-send-hoverbutton: #04416d;
 $sparrow-button-background: #2d2c2c;
 $sparrow-button-color: #e5e5e5;
