--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -87,6 +87,7 @@ $sparrow-errorTextColor:#fe8c98;
   --sparrow-blue: #{$sparrow-blue};
   --sparrow-button-background: #{$sparrow-button-background};
   --error--color:#{$sparrow-errorTextColor};
+  --sparrow-text-color:#{$sparrow-text-color};
 }
 
 // $button-color: linear-gradient(270deg, #6147ff -1.72%, #1193f0 100%);
