refactor: Added generic table component [136]

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -62,6 +62,7 @@ $sparrow-editor-string-color: #CE9178;
 $sparrow-email-invite-bg-color:#1E1E1E;
 $sparrow-small-text-size: 0.75rem;
 $sparrow-base-text-size: 0.875rem;
+$sparrow-medium-text-size: 1.125rem;
 
 :root {
   --blackColor: #{$sparrow-black};
@@ -115,6 +116,7 @@ $sparrow-base-text-size: 0.875rem;
   --editor-string-color: #{$sparrow-editor-string-color};
   --base-text: #{$sparrow-base-text-size};
   --small-text: #{$sparrow-small-text-size};
+  --medium-text: #{$sparrow-medium-text-size};
 }
 
 // $button-color: linear-gradient(270deg, #6147ff -1.72%, #1193f0 100%);
