fix: Resolved comments []

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -176,7 +176,8 @@ $font-sizes: (
   17: 1.0625rem, // 17px in rem
   18: 1.125rem, // 18px in rem
   19: 1.1875rem, // 19px in rem
-  20: 1.25rem // 20px in rem
+  20: 1.25rem, // 20px in rem
+  36: 2.25rem // 36px in rem
 );
 
 // Generate utility classes for font sizes
