fix: Fixed app crash on two places []

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -158,7 +158,7 @@ $theme-colors: map-merge(
     "keyValuePairColor": $sparrow-key-value-pair,
     "dullBackground": $sparrow-dull-background,
     "sparrowBottomBorder": $sparrow-bottom-border,
-    "emailInviteBackgroundColor":$sparrow-email-invite-bg-color
+    "emailInviteBackgroundColor":$sparrow-email-invite-bg-color,
     "dropdownBorderColor":$sparrow-dropdown-border-color
   )
 );
