refactor: create generic progress bar [#141]
Signed-off-by: Md Asif Raza <itsmdasifraza@gmail.com>

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -64,6 +64,7 @@ $sparrow-small-text-size: 0.75rem;
 $sparrow-base-text-size: 0.875rem;
 $sparrow-medium-text-size: 1.125rem;
 $sparrow-right-click-menu:#232527;
+$sparrow-gradient :linear-gradient(270deg, #6147ff -1.72%, #1193f0 100%);
 
 :root {
   --blackColor: #{$sparrow-black};
