--- a/src-tauri/assets/DeepLinkRegistryEntries.wxs
+++ b/src-tauri/assets/DeepLinkRegistryEntries.wxs
@@ -12,7 +12,7 @@
         >
 					<RegistryValue
             Type="string"
-            Value="C:\Program Files\sparrow-app\sparrow-app.exe"
+            Value="C:\Program Files\Sparrow\Sparrow.exe"
             KeyPath="yes"
           />
 				</RegistryKey>
