--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -181,6 +181,7 @@ $sparrow-font-sizes: (
   18: 1.125rem, // 18px in rem
   19: 1.1875rem, // 19px in rem
   20: 1.25rem, // 20px in rem
+  28: 1.75rem, // 28px in rem
   36: 2.25rem // 36px in rem
 );
 
