--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -267,12 +267,9 @@ textarea {
   resize: none;
 }
 .splitpanes__splitter{
-  border-right:  1px solid var(--border-color) !important;
-  border-top: 1px solid var(--border-color) !important;
-  border-left: transparent !important;
-  border-bottom: transparent !important;
+  background-color: var(--border-color) !important;
+  border: none !important;
 }
 .splitpanes__splitter:active, .splitpanes__splitter:hover{
-  border-right: 1px solid var(--primary-btn-color) !important;
-  border-top: 1px solid var(--primary-btn-color) !important;;
+  background-color: var(--primary-btn-color) !important;
 }
