--- a/src-tauri/assets/DeepLinkRegistryEntries.wxs
+++ b/src-tauri/assets/DeepLinkRegistryEntries.wxs
@@ -12,7 +12,7 @@
         >
 					<RegistryValue
             Type="string"
-            Value="&quot;C:\Program Files\Sparrow\Sparrow.exe&quot; &quot;%1&quot;"
+            Value="&quot;[INSTALLDIR]Sparrow.exe&quot; &quot;%1&quot;"
             KeyPath="yes"
           />
 				</RegistryKey>
