--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -36,6 +36,7 @@ $sparrow-send-button: #85c2ff;
 $sparrow-send-hoverbutton: #04416d;
 $sparrow-button-background: #2d2c2c;
 $sparrow-button-color: #e5e5e5;
+$sparrow-button-disabled: #636566;
 $sparrow-input-slider-button: #1d3650;
 $sparrow-dull-background: #232424;
 $sparrow-bottom-border: #85c2ff;
@@ -120,6 +121,7 @@ $sparrow-right-click-menu:#232527;
   --small-text: #{$sparrow-small-text-size};
   --medium-text: #{$sparrow-medium-text-size};
   --right-click-menu : #{$sparrow-right-click-menu};
+  --button-disabled: #{$sparrow-button-disabled};
 }
 
 // $button-color: linear-gradient(270deg, #6147ff -1.72%, #1193f0 100%);
